[tool.poetry]
name = "7-eleven-locations-thailand"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
